name: Haskell99
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: Jared Davis
maintainer: Jared Davis
build-depends:
stability: experimental
homepage: https://github.com/Jared-Prime/haskell99
package-url:
bug-reports:
synopsis:
description:
category: education
author: Jared Davis
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
extra-doc-files:
Executable Haskell99
  main-is: ListExercise/Problem9.hs
  buildable: True
  build-tools:
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs:
  other-modules: ContinuedListExercise.Problem11
                 ListExercise.Problem3 ListExercise.Problem8 ListExercise.Problem6
                 ListExercise.Problem10 ListExercise.Problem7 ListExercise.Problem1
                 ListExercise.Problem5 ListExercise.Problem4 ListExercise.Problem2
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
