name: Haskell99
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright: Jared Davis
maintainer: Jared Davis
build-depends:
stability: experimental
homepage: https://github.com/Jared-Prime/haskell99
package-url:
bug-reports:
synopsis:
description:
category: education
author: Jared Davis
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
extra-doc-files:
Executable Haskell99
  main-is: List1/Problem9.hs
  buildable: True
  build-tools:
  cpp-options:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs:
  other-modules: List1.Problem3 List1.Problem8 List1.Problem6
                 List1.Problem10 List1.Problem7 List1.Problem1 List1.Problem5
                 List1.Problem4 List1.Problem2 List2.Problem20 List2.Problem12
                 List2.Problem11 List2.Problem15 List2.Problem17 List2.Problem18
                 List2.Problem16 List2.Problem14 List2.Problem19 List3.Problem21
  ghc-prof-options:
  ghc-shared-options:
  ghc-options:
  hugs-options:
  nhc98-options:
  jhc-options:
